# Guru-analyzer_of_books

./: .example.env  .gitignore  Dockerfile  Document_based_Q_A_LLM_Falcon_7b+OpenAi+chat_memory.ipynb  Document_based_Q_A_LLM_Falcon_7b+OpenAi+memory+token_ipynb_.ipynb  Document_based_Q_A_LLM_Falcon_7b+OpenAi.ipynb  Document_based_Q_A_LLM_Falcon_7b.ipynb  Document_based_Q_A_LLM_Falcon_7b_v2.ipynb  LICENSE  Orbit_param.txt  README.md  System engineering.docx  Text_summarization.ipynb  Text_summarization_nltk_ipynb_.ipynb  Text_summarization_v2.ipynb  docker-compose.yml  gpt_3_5.ipynb  main.py  pyproject.toml  requirements.txt
alembic/versions/: 541f9646698e_del_tokens.py  558df6998045_delete_vector_db_name.py  68dcdfe2024b_init.py  7a7d9e5e0dee_add_tokens_0.py  7c329bbda5fc_add_tokens_count.py  938e7acf5908_del_tokens_count.py  b11af75a9c09_add_1_tokens_count.py  c49d9821e258_bugfix.py  eee2b9819e21_add_chathistory.py
src/conf/: config.py  constants.py  messages.py
src/database/: db.py  models.py
src/model/: model.py
src/repository/: chats.py  files.py  qa.py  users.py
src/routes/: auth.py  chats.py  files.py  front.py  qa.py  users.py
src/schemas/: chats.py  files.py  users.py
src/services/: auth.py  cloud_storage.py  files.py
static/css/: chat.css  style.css
static/js/: auth.js  chat.js  files.js
templates/: base.html  chat.html  index.html
tests/: conftest.py  test_unit_repository_chats.py  test_unit_repository_files.py  test_unit_repository_users.py  test_unit_services_files.py
